--- a/styles.css
+++ b/styles.css
@@ -208,3 +208,17 @@ body {
 .inline {
   display: inline;
 }
+
+.hidden {
+  display: none;
+}
+
+@media only screen and (max-width: 768px) {
+  .md-hidden {
+    display: none;
+  }
+
+  .md-inline {
+    display: inline;
+  }
+}
